crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_parse_self_documenting_base.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..10,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..10,
                                    node_index: NodeIndex(None),
                                    elements: [
                                        Interpolation(
                                            InterpolatedElement {
                                                range: 2..9,
                                                node_index: NodeIndex(None),
                                                expression: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 3..7,
                                                        id: Name("user"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                                runtime_str: None,
                                                runtime_interpolation_format_spec: None,
                                                runtime_formatted_value_format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        ),
                    },
                    runtime_joined_str: None,
                    runtime_values: None,
                },
            ),
        },
    ),
]
